内存泄漏解决&粒子效果完善

--- a/markdowns/接下来所需要做的.md
+++ b/markdowns/接下来所需要做的.md
@@ -1,5 +1,18 @@
 #接下来所需要做的#
-1. 把AB方块算入路线
-2. 把star.png改小，并且制作出不同颜色的pop粒子
-3. 玩一次游戏来测试
-4. 调整代码避免内存泄漏
+
+2013.2.15
+
+1. 把AB方块算入路线 OK
+2. 把star.png改小，并且制作出不同颜色的pop粒子 OK
+3. 玩一次游戏来测试 OK
+4. 调整代码避免内存泄漏 OK
+
+2013.2.17
+
+1.让动画过程中不允许消方块
+2.修改Matching的结果返回方式
+3.修改方块图片，让游戏更加有趣
+4.使用更加漂亮的背景
+5.加入边框，并且加入重玩按钮
+
+如果有时间，就开始研究游戏逻辑和道具系统了
