--- a/markdowns/接下来所需要做的.md
+++ b/markdowns/接下来所需要做的.md
@@ -10,7 +10,7 @@
 2013.2.17
 
 1. ~~让动画过程中不允许消方块~~
-2. 修改Matching的结果返回方式 -半完成
+2. ~~修改Matching的结果返回方式~~
 3. 修改方块图片，让游戏更加有趣
 4. 使用更加漂亮的背景
 5. 加入边框，并且加入重玩按钮
